WIP sample tests and configuration